force-app/main/default/objects/AAR_Reviewer__c/AAR_Reviewer__c.object-meta.xml
<CustomObject>
    <description
  >Junction object linking an Evaluator (User) to a specific AAR Record. Drives evaluator record-level access via Apex Managed Sharing on AAR creation of reviewer assignment.</description>
    <label>AAR Reviewer</label>
    <nameField>
        <displayFormat>REV-{0000}</displayFormat>
        <label>Reviewer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAR Reviewers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>