force-app/main/default/objects/AAR_Reviewer__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AAR Reviewer Assignments</relationshipLabel>
    <relationshipName>AAR_Reviewer_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>