force-app/main/default/objects/AAR_Reviewer__c/fields/Evaluator_Notes__c.field-meta.xml
<CustomField>
    <fullName>Evaluator_Notes__c</fullName>
    <label>Evaluator Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>